rspec-tools/tests/resources/invalid-rules/S101/javascript/rule.adoc
// the maximum amount of frameworks is 6
== How to fix it in Express.js
== How to fix it in Express.js
== How to fix it in Express.js
== How to fix it in Express.js
== How to fix it in Express.js
== How to fix it in Express.js
== How to fix it in Express.js
